Advogrand for mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +23,9 @@
 						<a href="#" class="menu-item">Партнеры</a>
 						<a href="#" class="menu-item">Контакт</a>
 					</nav>
+					<div class="menu-burger">
+						<span></span>
+					</div>
 					<a href="tel:+7-499-322-8580" class="button">Перезвоните мне</a>
 				</div>
 			</div>
@@ -217,7 +220,7 @@
 						</table>
 					</div>
 					<div class="advantages-clients">
-						<div class="advantages-clients-item"><div class="title">Нашими услугами уже пользуются:</div></div>
+						<div class="title">Нашими услугами уже пользуются:</div>
 						<div class="advantages-clients-item">
 							<img src="images/advantages/advantages1.png" alt="">
 							<p><b>208 000</b> - мужчин</p>
@@ -234,7 +237,10 @@
 							<img src="images/advantages/advantages4.png" alt="">
 							<p><b>13 500</b> - предпринимателей</p>
 						</div>
-						<a href="#" class="button">Узнать больше!</a>
+						<div class="advantages-clients-button">
+							<a href="#" class="button">Узнать больше!</a>
+						</div>
+						
 					</div>
 				</div>
 			</div>
